fix: fixed dark mode partner logo

--- a/components/home/landingBanner/style.module.scss
+++ b/components/home/landingBanner/style.module.scss
@@ -93,7 +93,7 @@ $border-radius: 5px;
     }
     .slider > div {
       box-sizing: border-box;
-      color: #FFF;
+      color: color(primary-white);
       //height: 120px;
       font-size: text(xxl-larger);
       font-weight: 500;
