--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -330,7 +330,7 @@ input:-webkit-autofill {
   }
 
   .swiper-slide-shadow-left {
-    background-color: white;
+    background-color: color(primary-white);
     box-shadow: none;
     background-image: none !important;
   }
